fixed issues on mobileview

--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -87,7 +87,7 @@
         @media screen and (max-width: 450px) {
           height: 78px;
           width: 215px;
-          font-size: 0.64rem;
+          font-size: 0.65rem;
           margin-top: 17px;
           border-radius: 15px;
         }
