--- a/src/components/layout/Menu/MainMenu.module.scss
+++ b/src/components/layout/Menu/MainMenu.module.scss
@@ -41,7 +41,7 @@
       right: 0px;
       width: 290px;
       min-height: 375px;
-      padding: 25px 45px 40px 10px;
+      padding: 25px 45px 40px 8.5px;
     }
 
     .logo2 {
